--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -1,3 +1,37 @@
+$max-main-width: 1000px;
+
 body {
     padding-top: 70px;
+}
+
+.container {
+    max-width: $max-main-width;
+}
+
+#contact-info {
+    ul {
+        list-style: none;
+        padding-left: 0;
+    }
+}
+
+
+.pub {
+
+    padding-bottom: 1em;
+
+    .title {
+        
+        font-weight: 700;
+    }
+
+    .authors {
+        .me{
+            font-weight: 700;
+        } 
+    }
+
+    .location {
+
+    }
 }
